--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "second-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/sahilaggarwal1/react-contactUs-page.git",
+  "homepage": "https://sahilaggarwal1.github.io/contact_us",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
